--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -62,9 +62,9 @@ flutter:
   # example:
 
   fonts:
-     - family: CustomFlutterIcons
-       fonts:
-         - asset: fonts/CustomFlutterIcons.ttf
+    #  - family: CustomFlutterIcons
+    #    fonts:
+    #      - asset: fonts/CustomFlutterIcons.ttf
 
      - family: Nunito
        fonts:
