--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +35,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -48,67 +47,62 @@ flutter:
   assets:
     - assets/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-
   fonts:
     #  - family: CustomFlutterIcons
     #    fonts:
     #      - asset: fonts/CustomFlutterIcons.ttf
+    - family: Nunito
+      fonts:
+        - asset: fonts/NunitoExtraLight.ttf
+          weight: 200
+        - asset: fonts/NunitoLight.ttf
+          weight: 300
+        - asset: fonts/NunitoRegular.ttf
+          weight: 400
+        - asset: fonts/NunitoSemiBold.ttf
+          weight: 600
+        - asset: fonts/NunitoBold.ttf
+          weight: 700
+        - asset: fonts/NunitoExtraBold.ttf
+          weight: 800
+        - asset: fonts/NunitoBlack.ttf
+          weight: 900
 
-     - family: Nunito
-       fonts:
-         - asset: fonts/NunitoExtraLight.ttf
-           weight: 200
-         - asset: fonts/NunitoLight.ttf
-           weight: 300
-         - asset: fonts/NunitoRegular.ttf
-           weight: 400
-         - asset: fonts/NunitoSemiBold.ttf
-           weight: 600
-         - asset: fonts/NunitoBold.ttf
-           weight: 700
-         - asset: fonts/NunitoExtraBold.ttf
-           weight: 800
-         - asset: fonts/NunitoBlack.ttf
-           weight: 900
-
-     - family: Sans
-       fonts:
-         - asset: assets/font/OpenSans-Bold.ttf
-           weight: 800
-         - asset: assets/font/OpenSans-Semibold.ttf
-           weight: 600
-         - asset: assets/font/OpenSans-Regular.ttf
-           weight: 400
-         - asset: assets/font/OpenSans-Light.ttf
-           weight: 200
-     - family : Popins
-       fonts:
-         - asset: assets/font/Poppins-Regular.ttf
-           weight: 400
-         - asset: assets/font/Poppins-SemiBold.ttf
-           weight : 600
-     - family : Berlin
-       fonts:
-         - asset: assets/font/BRLNSDB.TTF
-           weight: 700
-     - family : Gotik
-       fonts:
-         - asset: assets/font/GOTHIC.TTF
-           weight: 400
-         - asset: assets/font/GOTHICB.TTF
-           weight : 600
+    - family: Sans
+      fonts:
+        - asset: assets/font/OpenSans-Bold.ttf
+          weight: 800
+        - asset: assets/font/OpenSans-Semibold.ttf
+          weight: 600
+        - asset: assets/font/OpenSans-Regular.ttf
+          weight: 400
+        - asset: assets/font/OpenSans-Light.ttf
+          weight: 200
+    - family: Popins
+      fonts:
+        - asset: assets/font/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/font/Poppins-SemiBold.ttf
+          weight: 600
+    - family: Berlin
+      fonts:
+        - asset: assets/font/BRLNSDB.TTF
+          weight: 700
+    - family: Gotik
+      fonts:
+        - asset: assets/font/GOTHIC.TTF
+          weight: 400
+        - asset: assets/font/GOTHICB.TTF
+          weight: 600
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -123,3 +117,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
