--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+2
+  uuid: ^2.2.2
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
   flutter_test:
