--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^4.3.2+2
   uuid: ^2.2.2
   smooth_star_rating: ^1.1.1
+  date_range_picker: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
